Link offset bug on mobile fixed (except for Directions button).

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -60,7 +60,6 @@ input:focus{outline:none;}
 .navColor{background:#333335;}
 #nav{position:fixed;top:0;left:0;z-index:2;width:100%;height:45px;line-height:41px;box-shadow:0px 1px 6px #888;text-align:left;background:#333335;filter:progid:dximagetransform.microsoft.gradient(startColorstr='#555556', endColorstr='#222224');background-image:-webkit-linear-gradient(bottom, #222224 0%, #555556 100%);background-image:-moz-linear-gradient(bottom, #222224 0%, #555556 100%);background-image:-ms-linear-gradient(bottom, #222224 0%, #555556 100%);background-image:-o-linear-gradient(bottom, #222224 0%, #555556 100%);background-image:linear-gradient(bottom, #222224 0%, #555556 100%);}#nav img{max-height:100%;vertical-align:middle;}
 #navContainer{height:100%;display:inline-block;padding-left:50px;font-size:100%;}#navContainer .last{margin-right:0;}
-.mobileMode{padding-left:10px !important;}
 .roundedIcon{border:2px solid #777779;border-radius:6px;}
 .navElement{box-shadow:inset 0px 0px 5px #777779;border:2px solid #777779;border-radius:6px;background:white;display:inline-block;vertical-align:middle;margin-right:60px;line-height:normal;}.navElement:focus{outline:white solid thin;}
 .navElement a{display:inline-block;}
